--- a/core/templates/core/landing_page.html
+++ b/core/templates/core/landing_page.html
@@ -26,7 +26,7 @@
 		<div class="grid-row">
 			<div class="column-three-quarters">
 				<section class="grid-row">
-					<div class="column-seven-ninths article-content">
+					<div class="column-eight-ninths article-content">
 						<h2 class="heading-large margin-top-0">
 							As a trading nation, we are outward-looking and thrive on the exchange of goods, ideas and people with the rest of the world.
 						</h2>
